--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -39,6 +39,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: ./maatouch
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}
           token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: true
